[package]
name = "CiderStorage"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
serde = { version = "1.0", features = ["derive"] }

base32 = "0.4.0"

filebuffer = "0.4.0"
paranoid-hash = "0.3.0"

blake3 = "1.0.0"

dirs = "4.0.0"

hex = "0.4.3"

log = "0.4.14"